# BattleshipQtC-

./: .gitignore  CMakeLists.txt  GameBoard.qml  GameIntro.qml  LocalGameplay.qml  Main.qml  PlayerPositiong.qml  gamecontroller.cpp  gamecontroller.h  main.cpp
